Created the about me section and gave a slight description of me

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
         <h1>Zaki James</h1>
         <p>Software Engineer | Web Developer</p>
     </header>
+
+    <section id="aboutme">
+        <h1>About me</h1>
+        <p>I am a young passionate developer who likes being imaginative with ideas and also passionate about solving problems!</p>
+    </section>
 </body>
 </html>
