Added an  image to the about me section

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     </header>
 
     <section id="aboutme">
-        <h1>About me</h1>
-        <p>I am a young passionate developer who likes being imaginative with ideas and also passionate about solving problems!</p>
+        <div id="text">
+            <h1>About me</h1>
+            <p>I am a young passionate developer who likes being imaginative with ideas and also passionate about solving problems!</p>
+        </div>
+        <img src="images/20230709_180419 (1).jpg" alt="Zaki">
     </section>
 </body>
 </html>
