Proclaimed the contacts part and added the respective elements

--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
         </div>
         <img src="images/20230709_180419 (1).jpg" alt="Zaki">
     </section>
+
+    <section id="contacts">
+        <h2>Connect with me</h2>
+        <p>email</p>
+        <p>Mobile number</p>
+        <p>github account</p>
+        <p>Instagram</p>
+        
+    </section>
 </body>
 </html>
