Created links to direct the user to my socials

--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
 
     <section id="contacts">
         <h2>Connect with me</h2>
-        <p>email</p>
-        <p>Mobile number</p>
-        <p>github account</p>
-        <p>Instagram</p>
-        
+        <p>email: <a href="#">zakijames024@gmail.com</a></p>
+        <p>github account: <a href="https://github.com/zaki-s">zaki-s</a></p>
+        <p>Linkedin: <a href="#">zaki james</a></p>
+
     </section>
 </body>
 </html>
