--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 
     <section id="contacts">
         <h2>Connect with me</h2>
-        <p>email: <a href="#">zakijames024@gmail.com</a></p>
-        <p>github account: <a href="https://github.com/zaki-s">zaki-s</a></p>
+        <p>Email: <a href="#">zakijames024@gmail.com</a></p>
+        <p>Github: <a href="https://github.com/zaki-s">zaki-s</a></p>
         <p>Linkedin: <a href="#">zaki james</a></p>
-
     </section>
+
+    <button class="btn">Work with me</button>
 </body>
 </html>
