Changed the background color of the header to go with the theme

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <p>Github: <a href="https://github.com/zaki-s">zaki-s</a></p>
         <p>Linkedin: <a href="#">zaki james</a></p>
     </section>
-
-    <button class="btn">Work with me</button>
+   
+    <section id="button">
+        <button class="btn">Work with me</button>
+    </section>
 </body>
 </html>
