--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>Software Engineer | Web Developer</p>
     </header>
 
-    <section id="aboutme">
+    <section id="profile">
         <div id="text">
             <h1>About me</h1>
             <p>I am a young passionate developer who likes being imaginative with ideas and also passionate about solving problems!</p>
