Centered the button in the middle of the page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>Linkedin: <a href="#">zaki james</a></p>
     </section>
    
-    <section id="button">
+    <section class="action">
         <button class="btn">Work with me</button>
     </section>
 </body>
