Added a few extra lines on mt profile section, i think ill add more

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div id="text">
             <h1>About me</h1>
             <p>I am a young passionate developer who likes being imaginative with ideas and also passionate about solving problems!</p>
+            <p>My goal is to also help younger like minded individuals in the same field, when i get much better in the craft.</p>
             <p>I also love gaming and CARS of course!</p>
         </div>
         <img src="images/20230709_180419 (1).jpg" alt="Zaki">
